<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favoritetvshow.FavoriteTvShowFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/card_item"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>